DCO: Cambio de SG getOwnAccounts
